# Market_Data_Dissemination_Simulator

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: company_tickers.json  extract_symbols.ps1  quote_latencies.csv  tickers.txt  trade_latencies.csv
docs/: Design Patterns and Module Interactions.md  Market Data Dissemination Simulator Requirements.markdown  Market Data Dissemination Simulator Roadmap.markdown
python/: app.py  plot_latency.py  plot_network.py  plot_throughput.py  plot_underlying_boost_vs_me.py  requirements.txt
src/: main.cpp
src/disseminator/: Disseminator.cpp  Disseminator.h  IDisseminator.h  UdpDisseminator.h  ZmqDisseminator.h
src/feedhandler/: FeedHandler.cpp  FeedHandler.h  IFeedHandler.h  UdpFeedhandler.h  ZmqFeedHandler.h
src/generator/: BaseGenerator.h  IGenerator.h  MarketDataGenerator.cpp  MarketDataGenerator.h  RandomWalkGenerator.h  types.h
src/monitor/: LatencyMonitor.h
src/subscriber/: SubscriberInterface.cpp  SubscriberInterface.h
src/utils/: CustomSPSCQ.h  CustomSpscQueue.h  QueueConcepts.h  SpinSpscQueue.h  WaitableSpscQueue.cpp  WaitableSpscQueue.h  config.h  types.h
tests/: disseminator_test.cpp  disseminator_test.h  test_RandomWalkGenerator.cpp  test_UdpDisseminator.cpp  test_UdpFeedHandler.cpp  test_ZmqDisseminator.cpp  test_ZmqFeedhandler.cpp  test_basic.cpp  test_disseminator.cpp  test_generator.cpp  test_integration_disseminator_subscriberInterface.cpp  test_integration_udp.cpp  test_integration_zmq_disseminator_feedhandler.cpp  test_sanity_basic_test.cpp  test_subscriber_interface.cpp  test_waitable_queue.cpp  waitable_queue_test.cpp
